# nuitka-demo

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/tdw/nuitka_demo/: api.py  asgi.py  config.py  hello.py  lib.py  main.py
