[metadata]
name = tdw-nuitka-demo
version = attr: tdw.nuitka_demo.__version__
description = Sample Nuitka Application
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers

[options]
include_package_data = True
package_dir=
    =src
packages=find_namespace:
python_requires = >= 3.9
zip_safe = False


[options.packages.find]
where=src

[options.extras_require]
dev = pytest>=6.2.5;nuitka>=0.6.19.4